--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,21 @@
     rewards-farmer1:
       image: farmer_ms:latest
       container_name: farmer1
-      shm_size: 8gb
-      command: bash -c 'python3 main.py -d https://discord.com/api/webhooks/1210324650182312057/5gSHH25ScFPG0UhHFcL-5qngtmohGOrtDU1Akjl7vtz2ze-WQqjevVTan7nZn61J_n3y -vn'
+      shm_size: 6gb
+      command: bash -c 'python3 main.py -v'
       volumes:
         - ./accounts.json:/app/accounts.json
-        - ./logs:/app/logs1
+        - ./logs1:/app/logs
       restart: 'no'
 
     rewards-farmer2:
       image: farmer_ms:latest
       container_name: farmer2
-      shm_size: 8gb
-      command: bash -c 'python3 main.py -d https://discord.com/api/webhooks/1210324650182312057/5gSHH25ScFPG0UhHFcL-5qngtmohGOrtDU1Akjl7vtz2ze-WQqjevVTan7nZn61J_n3y -vn'
+      shm_size: 6gb
+      command: bash -c 'python3 main.py -v'
       volumes:
-        - ./accounts.json:/app/accounts2.json
-        - ./logs:/app/logs2
+        - ./accounts2.json:/app/accounts.json
+        - ./logs2:/app/logs
       restart: 'no'
 
 ...
